--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,19 +6,32 @@
     <title>Autocomplete App</title>
     <style>
         body {
-            background-color: black;
-            color: white;
-            font-family: monospace;
+            background-color: #121212;
+            color: #e0e0e0;
+            font-family: 'Roboto', sans-serif;
             padding: 20px;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
         textarea {
-            width: 100%;
-            height: 90vh;
-            background-color: black;
-            color: white;
-            border: none;
+            width: 80%;
+            height: 80vh;
+            background-color: #1e1e1e;
+            color: #e0e0e0;
+            border: 1px solid #333;
+            border-radius: 8px;
             font-size: 16px;
             resize: none;
+            padding: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        textarea:focus {
+            outline: none;
+            border-color: #6200ea;
+            box-shadow: 0 4px 8px rgba(98, 0, 234, 0.4);
         }
     </style>
 </head>
@@ -28,12 +41,10 @@
         const textarea = document.getElementById('editor');
 
         textarea.addEventListener('keydown', async (event) => {
-            // Trigger on Ctrl + Shift + F
-            if (event.ctrlKey && event.shiftKey && event.key === 'F') {
+            if (event.ctrlKey && event.key === ' ') {
                 event.preventDefault();
                 const text = textarea.value;
 
-                // Call the local Flask API running on localhost:5000
                 const response = await fetch('http://localhost:5000/predict', {
                     method: 'POST',
                     headers: {
@@ -42,11 +53,9 @@
                     body: JSON.stringify({ text })
                 });
                 
-                // Handle the response from the Flask API
                 const data = await response.json();
                 const suggestedWord = data.suggested_word;
 
-                // Append the suggested word to the text
                 textarea.value += suggestedWord + ' ';
             }
         });
